@@ -1,8 +1,8 @@
 import re
 import threading
-import json
+import difflib
 
-from resources.lib.ui import source_utils, client, control
+from resources.lib.ui import source_utils, control
 from resources.lib.ui.BrowserBase import BrowserBase
 from resources.lib.debrid import real_debrid, premiumize, all_debrid, torbox
 
@@ -40,9 +40,10 @@ class Sources(BrowserBase):
         torrents = api.list_torrents()
         torrents = source_utils.filter_sources('realdebrid', torrents, mal_id, season, episode)
         filenames = [re.sub(r'\[.*?]\s*', '', i['filename'].replace(',', '')) for i in torrents]
-        filenames_query = ','.join(filenames)
-        response = client.request('https://armkai.vercel.app/api/fuzzypacks', params={"dict": filenames_query, "match": query})
-        resp = json.loads(response) if response else []
+        query_lower = query.lower()
+        filenames_lower = [f.lower() for f in filenames]
+        close_matches = difflib.get_close_matches(query_lower, filenames_lower, cutoff=0.23)
+        resp = [filenames_lower.index(i) for i in close_matches]
         for i in resp:
             torrent = torrents[i]
             torrent_info = api.torrentInfo(torrent['id'])
@@ -80,9 +81,10 @@ class Sources(BrowserBase):
         cloud_items = premiumize.Premiumize().list_folder()
         cloud_items = source_utils.filter_sources('premiumize', cloud_items, mal_id, season, episode)
         filenames = [re.sub(r'\[.*?]\s*', '', i['name'].replace(',', '')) for i in cloud_items]
-        filenames_query = ','.join(filenames)
-        response = client.request('https://armkai.vercel.app/api/fuzzypacks', params={"dict": filenames_query, "match": query})
-        resp = json.loads(response) if response else []
+        query_lower = query.lower()
+        filenames_lower = [f.lower() for f in filenames]
+        close_matches = difflib.get_close_matches(query_lower, filenames_lower, cutoff=0.23)
+        resp = [filenames_lower.index(i) for i in close_matches]
 
         for i in resp:
             torrent = cloud_items[i]
@@ -117,9 +119,10 @@ class Sources(BrowserBase):
         cloud_items = torbox.TorBox().list_torrents()
         cloud_items = source_utils.filter_sources('torbox', cloud_items, mal_id, season, episode)
         filenames = [re.sub(r'\[.*?]\s*', '', i['name'].replace(',', '')) for i in cloud_items]
-        filenames_query = ','.join(filenames)
-        response = client.request('https://armkai.vercel.app/api/fuzzypacks', params={"dict": filenames_query, "match": query})
-        resp = json.loads(response) if response else []
+        query_lower = query.lower()
+        filenames_lower = [f.lower() for f in filenames]
+        close_matches = difflib.get_close_matches(query_lower, filenames_lower, cutoff=0.23)
+        resp = [filenames_lower.index(i) for i in close_matches]
         for i in resp:
             torrent = cloud_items[i]
             if not torrent['cached'] or not torrent['download_finished'] or len(torrent['files']) < 1:
@@ -153,9 +156,10 @@ class Sources(BrowserBase):
         torrents = api.list_torrents()['links']
         torrents = source_utils.filter_sources('alldebrid', torrents, mal_id, season, episode)
         filenames = [re.sub(r'\[.*?]\s*', '', i['filename'].replace(',', '')) for i in torrents]
-        filenames_query = ','.join(filenames)
-        response = client.request('https://armkai.vercel.app/api/fuzzypacks', params={"dict": filenames_query, "match": query})
-        resp = json.loads(response) if response else []
+        query_lower = query.lower()
+        filenames_lower = [f.lower() for f in filenames]
+        close_matches = difflib.get_close_matches(query_lower, filenames_lower, cutoff=0.23)
+        resp = [filenames_lower.index(i) for i in close_matches]
         for i in resp:
             torrent = torrents[i]
             torrent_info = api.link_info(torrent['link'])
