@@ -1,9 +1,9 @@
 import os
 import re
-import json
+import difflib
 
 from resources.lib.ui.BrowserBase import BrowserBase
-from resources.lib.ui import source_utils, control, client
+from resources.lib.ui import source_utils, control
 
 PATH = control.getSetting('folder.location')
 
@@ -25,9 +25,10 @@ class Sources(BrowserBase):
 
         filenames = source_utils.filter_sources('local', filenames, mal_id, season, episode)
         clean_filenames = [re.sub(r'\[.*?]\s*', '', i['name'].replace(',', '')) for i in filenames]
-        filenames_query = ','.join(clean_filenames)
-        response = client.request('https://armkai.vercel.app/api/fuzzypacks', params={"dict": filenames_query, "match": query})
-        resp = json.loads(response) if response else []
+        query_lower = query.lower()
+        filenames_lower = [f.lower() for f in clean_filenames]
+        close_matches = difflib.get_close_matches(query_lower, filenames_lower, cutoff=0.23)
+        resp = [filenames_lower.index(i) for i in close_matches]
         match_files = [filenames[i] for i in resp]
 
         for file_info in match_files:
