@@ -1,3 +1,6 @@
+Changelog v5.1.97 (2025-04-11):
+- Replaced Fuzzypacks with difflib
+
 Changelog v5.1.96 (2025-04-10):
 - Added Sub and Dub Presets
 
